Testing - Low Speed Xinput (XUSBI)

--- a/platformio.ini
+++ b/platformio.ini
@@ -85,6 +85,10 @@ build_src_filter = ${env.build_src_filter} +<testing/sandbox>
 extends = rv003usb_base_v003
 build_src_filter = ${env.build_src_filter} +<testing/test_ethernet>
 
+[env:testing_ethernet]
+extends = rv003usb_base_v003
+build_src_filter = ${env.build_src_filter} +<testing/demo_xinput>
+
 ; The bootloader is different from the regular demos
 
 [env:bootloader]
