Fix xinput platformio environment name

--- a/platformio.ini
+++ b/platformio.ini
@@ -85,7 +85,7 @@ build_src_filter = ${env.build_src_filter} +<testing/sandbox>
 extends = rv003usb_base_v003
 build_src_filter = ${env.build_src_filter} +<testing/test_ethernet>
 
-[env:testing_ethernet]
+[env:testing_demo_xinput]
 extends = rv003usb_base_v003
 build_src_filter = ${env.build_src_filter} +<testing/demo_xinput>
 
