Use ch32fun instead of ch32v003fun
I hope I didn't miss anything, `make all` ran through w/o any problems…

--- a/bootloader/testtop/Makefile
+++ b/bootloader/testtop/Makefile
@@ -1,7 +1,7 @@
 all : testtop
 
 testtop : testtop.c
-	gcc -o $@ $^ -I../../ch32v003fun/minichlink -ludev
+	gcc -o $@ $^ -I../../ch32fun/minichlink -ludev
 
 clean :
 	rm -rf *.o *~ testtop
