--- a/demo_hidapi/testtop/Makefile
+++ b/demo_hidapi/testtop/Makefile
@@ -1,10 +1,10 @@
 all : testtop ledtest
 
 testtop : testtop.c
-	gcc -o $@ $^ -I../../ch32v003fun/minichlink -ludev
+	gcc -o $@ $^ -I../../ch32fun/minichlink -ludev
 
 ledtest : ledtest.c
-	gcc -o $@ $^ -I../../ch32v003fun/minichlink -ludev
+	gcc -o $@ $^ -I../../ch32fun/minichlink -ludev
 
 clean :
 	rm -rf *.o *~ testtop ledtest
