--- a/platformio.ini
+++ b/platformio.ini
@@ -16,9 +16,9 @@ lib_dir = doesntexist
 [env]
 platform = https://github.com/Community-PIO-CH32V/platform-ch32v.git
 framework = ch32v003fun
-; use ch32v003fun referenced in this project instead of a bleeding edge one
+; use ch32fun referenced in this project instead of a bleeding edge one
 platform_packages = 
-    framework-ch32v003fun@symlink://ch32v003fun
+    framework-ch32fun@symlink://ch32fun
 ; only build C file here, ASM file must be built in a separate folder!
 build_src_filter = +<rv003usb/rv003usb.c>
 extra_scripts =
@@ -98,5 +98,5 @@ framework =
 ; this explicitly does not have rv003usb/rv003usb.c included, because it is provided by bootloader.c
 build_src_filter = +<bootloader/bootloader.c>
 board_build.ldscript = bootloader/ch32v003fun-usb-bootloader.ld
-build_flags = ${env.build_flags} -DUSE_TINY_BOOT -Ich32v003fun/ch32fun
+build_flags = ${env.build_flags} -DUSE_TINY_BOOT -Ich32fun/ch32fun
 
