--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ch32v003fun"]
-	path = ch32v003fun
-	url = https://github.com/cnlohr/ch32v003fun
+[submodule "ch32fun"]
+	path = ch32fun
+	url = https://github.com/cnlohr/ch32fun
