--- a/bootloader/testblink/Makefile
+++ b/bootloader/testblink/Makefile
@@ -1,15 +1,15 @@
 all : testblink.bin busbflash
 
 TARGET:=testblink
-CH32V003FUN:=../../ch32v003fun/ch32v003fun
-MINICHLINK?=../../ch32v003fun/minichlink
+CH32FUN:=../../ch32fun/ch32fun
+MINICHLINK?=../../ch32fun/minichlink
 
 ADDITIONAL_C_FILES+=
 SYSTEM_C:=
 EXTRA_CFLAGS:=-I../rv003usb -I../lib
 
 busbflash : busbflash.c
-	gcc -o $@ $^ -ludev -I../../ch32v003fun/minichlink
+	gcc -o $@ $^ -ludev -I../../ch32fun/minichlink
 
 testflash : busbflash testblink.bin
 	./busbflash
@@ -23,7 +23,7 @@ LINKER_SCRIPT:=scratchpad.ld
 WRITE_SECTION:=bootloader
 FLASH_COMMAND:=./busbflash
 
-include ../../ch32v003fun/ch32v003fun/ch32v003fun.mk
+include ../../ch32fun/ch32fun/ch32fun.mk
 
 flash : busbflash cv_flash
 clean : cv_clean
