--- a/demo_pikokey_hid/Makefile
+++ b/demo_pikokey_hid/Makefile
@@ -1,7 +1,7 @@
 all : flash
 
 TARGET:=pikokey
-CH32FUN:=../ch32v003fun/ch32fun
+CH32FUN:=../ch32fun/ch32fun
 TARGET_MCU:=CH32V003
 
 ADDITIONAL_C_FILES+=../rv003usb/rv003usb.S ../rv003usb/rv003usb.c
