--- a/testing/test_lcd_rbo12864h-wfi/host/Makefile
+++ b/testing/test_lcd_rbo12864h-wfi/host/Makefile
@@ -1,7 +1,7 @@
 all : host
 
 host : host.c
-	gcc -g -o $@ $^ -I../../../ch32v003fun/minichlink -ludev -lusb-1.0 -lX11 -lXext -lGL -lm
+	gcc -g -o $@ $^ -I../../../ch32fun/minichlink -ludev -lusb-1.0 -lX11 -lXext -lGL -lm
 
 install_rules :
 	echo -ne "KERNEL==\"hidraw*\", SUBSYSTEM==\"hidraw\", MODE=\"0664\", GROUP=\"plugdev\"\n" | sudo tee /etc/udev/rules.d/20-hidraw.rules
